# multicat

./: .gitignore  CMakeLists.txt  Makefile  multicat_loop.sh  util.c
